Fixed a layout problem under Firefox.

--- a/app/component/navigation.scss
+++ b/app/component/navigation.scss
@@ -354,7 +354,9 @@ section.content {
     display: flex;
     max-height: 100%;
 
-    .message-bar-info {
+    .message-bar-content {
+      flex-basis: auto;
+      flex-grow: 1;
       width: 60%;
     }
   }
